<resources>
    <string name="app_name">Vegetable App</string>
    <string name="vegetables_and_fruits">Vegetables and Fruits</string>
    <string name="name">Name</string>
    <string name="phone_no">Phone No.</string>
    <string name="apple">Apple</string>
    <string name="carrot">Carrot</string>
    <string name="mango">Mango</string>
    <string name="tomato">Tomato</string>
    <string name="submit">Submit</string>
    <string name="select_quantity">Select Quantity</string>
    <string name="enter_quantity">Enter Quantity</string>
    <string name="date">Date</string>
    <string name="button">Button</string>
    <string name="textview">TextView</string>
    <string name="check_out">Check Out</string>
</resources>